@@ -59,7 +59,8 @@ sub _bounding_box {
   my $self = shift;
   my %input = @_;
 
-  return i_ft2_bbox($self->{id}, $input{size}, $input{sizew}, $input{string});
+  return i_ft2_bbox($self->{id}, $input{size}, $input{sizew}, $input{string}, 
+		    $input{utf8});
 }
 
 sub dpi {
